<resources>
    <string name="app_name">Open Market</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Login Page -->
    <string name="login_page_email">E-Posta</string>
    <string name="login_page_password">Parola</string>
    <string name="login_page_login">Giriş</string>
    <string name="login_page_register">Kayıt Ol</string>
    <string name="login_page_forgot_password">Şifremi unuttum</string>
    <string name="login_page_forget_me">Beni unut</string>

    <!-- Register Page -->
    <string name="register_page_username">Kullanıcı Adı</string>
    <string name="register_page_email">E-Posta</string>
    <string name="register_page_name">Ad</string>
    <string name="register_page_surname">Soyad</string>
    <string name="register_page_password">Parola</string>
    <string name="register_page_password_apply">Parolayı Onayla</string>
    <string name="register_page_new_password">Yeni Parola</string>
    <string name="register_page_register_button">Kayıt Ol</string>

    <!-- Homepage -->
    <string name="homepage_clear"><u>Temizle</u></string>
    <string name="homepage_sponsored">Sponsorlu Ürünler</string>
    <string name="homepage_recently_added">En Son Eklenenler</string>

    <!-- Add Product Page -->
    <string name="add_product_product_name">Ürün ismi</string>
    <string name="add_button">Ekle</string>
    <string name="edit_button">Düzenle</string>
    <string name="add_product_product_description">Ürün açıklaması</string>
    <string name="add_product_product_price">Ürün fiyatı</string>
    <string name="add_product_add_photo">Fotoğraf Ekle</string>

    <!-- Profile Page -->
    <string name="profile_page_account_settings">Hesap Ayarları</string>
    <string name="profile_page_saved_cards">Kayıtlı Kartlarım</string>
    <string name="profile_page_added_products">Eklediğim Ürünler</string>
    <string name="profile_page_logout">Çıkış Yap</string>
    <string name="profile_page_added_product_count">Eklenen Ürün</string>
    <string name="profile_page_comment_count">Yorum Sayısı</string>
    <string name="profile_page_purchased_product_count">Satın Alınan Ürün</string>
    <string name="profile_page_save_changes">Değişiklikleri Kaydet</string>

    <!-- Bottom Sheet Layout -->
    <string name="bottom_sheet_camera">Kamera</string>
    <string name="bottom_sheet_gallery">Galeri</string>
    <string name="bottom_sheet_sell">Doğrudan Satış</string>
    <string name="bottom_sheet_auction">Açık Artırma</string>

    <string name="item_delete">Sil</string>
    <string name="item_edit">Düzenle</string>

    <string name="credit_card_name">Kart Adı</string>
    <string name="credit_card_number">Kart Numarası</string>
    <string name="credit_card_exp_date">Son Kullanma</string>
    <string name="credit_card_cvv">CVV</string>
    <string name="notifications_page_title">Bildirimler</string>
    <string name="account_settings_page_user_details">Kullanıcı Bilgileri</string>
    <string name="account_settings_page_account_details">Hesap Bilgileri</string>

    <array name="add_product_category">
        <item>Kategori seç</item>
        <item>Giyim</item>
        <item>Ayakkabı</item>
        <item>Elektronik</item>
        <item>Kozmetik</item>
        <item>Çanta &amp; Saat</item>
        <item>Ev &amp; Yaşam</item>
        <item>Kırtasiye</item>
        <item>Spor &amp; Outdoor</item>
        <item>Motorlu Taşıt</item>
        <item>Hobi</item>
        <item>Antika</item>
    </array>

    <array name="add_product_condition">
        <item>Hiç kullanılmadı</item>
        <item>1 günden az</item>
        <item>1 haftadan az</item>
        <item>1 aydan az</item>
        <item>1 yıldan az</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>