<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".LoginActivity">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:src="@drawable/login_page_welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/login_page_email"
                app:errorEnabled="true"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toBottomOf="@id/imageView1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/login_page_password"
                app:errorEnabled="true"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="97dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/login_page_shape"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login_page_login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnRegister"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="97dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/login_page_shape"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login_page_register"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_margin="24dp"
                android:text="@string/login_page_forgot_password"
                android:textSize="10sp"
                android:background="@drawable/login_page_forgot_password"
                app:layout_constraintEnd_toEndOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="@id/btnRegister"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_page_lines"
                app:layout_constraintBottom_toBottomOf="@+id/btnForgotPassword"
                app:layout_constraintStart_toEndOf="@+id/btnForgotPassword"
                app:layout_constraintTop_toTopOf="@+id/btnForgotPassword" />

            <ImageView
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_page_lines"
                app:layout_constraintBottom_toBottomOf="@+id/btnForgotPassword"
                app:layout_constraintEnd_toStartOf="@+id/btnForgotPassword"
                app:layout_constraintTop_toTopOf="@+id/btnForgotPassword" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>